# axum-graphql

./: .env  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/model/: mod.rs
src/observability/: tracing.rs
src/routes/: mod.rs
